--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
+  <head>
+    <script src='./scripts.js'></script>
+  </head>
   <body>
-    <h1>Testing repo</h1>
+    <h1>Testing Canvas API integration</h1>
+    <iframe width=700px height=700px id='display'></iframe>
   </body>
 </html>
