--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src='./scripts.js'></script>
   </head>
   <body>
-    <h1>Testing Canvas API integration</h1>
+    <h1>Testing Canvas API integration (v1)</h1>
     <iframe width=700px height=700px id='display' src='https://longleafschool.instructure.com/api/v1/announcements?context_codes%5B%5D=course_1239&access_token=17917~dtltruChlRAWnAI0EKwd4pdaf7UO0SLWzl1ROaIJIITJdVnw7hemZOqcOMbIbLhH'></iframe>
   </body>
 </html>
