--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Testing Canvas API integration (v3)</h1>
-    <iframe width=700px height=700px id='display' href='./something.html'></iframe>
+    <iframe width=700px height=700px id='display' src='./something.html'></iframe>
   </body>
 </html>
