--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src='./scripts.js'></script>
   </head>
   <body>
-    <h1>Testing Canvas API integration (v3)</h1>
-    <iframe width=700px height=700px id='display' src='./something.html'></iframe>
+    <h1>Testing Canvas API integration</h1>
+    <iframe width=700px height=700px id='display'></iframe>
   </body>
 </html>
