--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Testing Canvas API integration</h1>
+    <iframe width="700px" height="700px" src="./something.html"></iframe>
   </body>
 </html>
