--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <script src='./scripts.js'></script>
   </head>
-  <body>
+  <body onload="start()">
     <h1>Testing Canvas API integration</h1>
-    <iframe width="700px" height="700px" src="./something.html" id="display"></iframe>
+    <iframe width="700px" height="700px" id="display"></iframe>
   </body>
 </html>
