[Debug] Remove scripts.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src='./scripts.js'></script>
+    <script src=''></script>
   </head>
   <body onload="start()">
     <h1>Testing Canvas API integration</h1>
