Experiment with setting source URL

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <script src='./scripts.js'></script>
   </head>
-  <body onload="start()">
+  <body>
     <h1>Testing Canvas API integration</h1>
+    <button onclick="start()">Click to test</button>
     <iframe width="700px" height="700px" id="display"></iframe>
   </body>
 </html>
