--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Testing Canvas API integration</h1>
-    <button onclick="start()">Click to test</button>
+    <button onclick="start()" style="display:block;">Click to test</button>
     <iframe width="700px" height="700px" id="display"></iframe>
   </body>
 </html>
