Reset index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <script src='./scripts.js'></script>
   </head>
   <body>
-    <h1>Testing Canvas API integration</h1>
-    <button onclick="start()" style="display:block;">Click to test</button>
-    <iframe width="300px" height="300px" id="display"></iframe>
+    <h1>crystallity.github.io</h1>
+    <h2>under construction</h2>
   </body>
 </html>
