Set up page to redirect

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>crystallity.github.io</h1>
-    <h2>under construction</h2>
+    <h2>Redirecting to repository...</h2>
+    <p>Click <a href="https://github.com/Crystallity/crystallity.github.io/tree/main">here</a> if you aren't redirected successfully.</p>
   </body>
 </html>
