Add timer to redirect

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <script src='./scripts.js'></script>
   </head>
-  <body>
+  <body onload="countdown()">
     <h1>crystallity.github.io</h1>
-    <h2>Redirecting to repository...</h2>
-    <p>Click <a href="https://github.com/Crystallity/crystallity.github.io/tree/main">here</a> if you aren't redirected successfully.</p>
+    <h2>Redirecting to repository in <span id="counter">3</span>...</h2>
+    <p>Click <a href="#" onclick="redirect()">here</a> if you aren't redirected successfully.</p>
   </body>
 </html>
