Added href to link for redundancy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body onload="countdown()">
     <h1>crystallity.github.io</h1>
     <h2>Redirecting to repository in <span id="counter">3</span>...</h2>
-    <p>Click <a href="#" onclick="redirect()">here</a> if you aren't redirected successfully.</p>
+    <p>Click <a href="https://github.com/Crystallity/crystallity.github.io/tree/main" onclick="redirect()">here</a> if you aren't redirected successfully.</p>
   </body>
 </html>
