--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src=''></script>
+    <script src='scripts.js'></script>
   </head>
   <body onload="countdown()">
     <h1>crystallity.github.io</h1>
