Format index.html

--- a/savethefish/index.html
+++ b/savethefish/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="styles.css">
 
         <!-- Load favicon -->
-        <link rel="icon" type="image/x-icon" href="logo.ico">
+        <link rel="icon" type="image/x-icon" href="logo.png">
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
@@ -79,8 +79,8 @@
         <div style="text-align:center;">
         <h2>help save the fish</h2>
         <p>click the button to share!!!</p>
-        <center><a href="mailto:?subject=save the fish&amp;body=fish are drowning every day. help save the fish! http://savethefish.w3spaces.com"><button>email</button></a></center><br>
-            <p style="display:inline;">or, you can send this link yourself: </p> <p onclick="copyShareLink()" style="display:inline; color: blue; cursor: pointer;">savethefish.w3spaces.com</p> <p style="display:inline">(click to copy)</p>
+        <center><a href="mailto:?subject=save the fish&amp;body=fish are drowning every day. help save the fish! https://crystallity.github.io/savethefish"><button>email</button></a></center><br>
+            <p style="display:inline;">or, you can send this link yourself: </p> <p onclick="copyShareLink()" style="display:inline; color: blue; cursor: pointer;">crystallity.github.io/savethefish</p> <p style="display:inline">(click to copy)</p>
         </div>
 
         <button onclick="modal('loginModal','show')" class="hidde">open modal test</button>
