Fix scripts.js and format links

--- a/savethefish/index.html
+++ b/savethefish/index.html
@@ -7,13 +7,13 @@
         <title>save the fish</title>
 
         <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
 
         <!-- Load favicon -->
         <link rel="icon" type="image/x-icon" href="logo.png">
 
         <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
+        <script src="./scripts.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.3.0/crypto-js.js"></script>
 
     </head>
