Remove and hide modals

--- a/savethefish/index.html
+++ b/savethefish/index.html
@@ -83,7 +83,7 @@
             <p style="display:inline;">or, you can send this link yourself: </p> <p onclick="copyShareLink()" style="display:inline; color: blue; cursor: pointer;">crystallity.github.io/savethefish</p> <p style="display:inline">(click to copy)</p>
         </div>
 
-        <button onclick="modal('loginModal','show')" class="hidde">open modal test</button>
+        <button onclick="modal('loginModal','show')" class="hidden">open modal test</button>
         <button onlick="login()" class="hidden">run login test</button>
 
         <div id="loginModal" class="modal">
@@ -102,20 +102,6 @@
                   </form>
                   <p style="color:red">this window doesn't do anything yet</p>
                   <p style="color:red">i'm vaguely impressed you found it</p>
-                </div>
-            </div>
-        </div>
-
-        <div id="lowRequestModal" class="modal">
-            <div class="modal-content-wrapper">
-                <span onclick="modal('lowRequestModal','hide')" class="close">&times;</span>
-                <div class="modal-content">
-                    <h2>the savethefish website is low on requests!</h2>
-                    <p>
-                        there have been lots of visits to the site recently! please try to limit opening
-                        the site, otherwise it may run out. if that happens, it will temporarily shut down.
-                    </p>
-                    <button onclick="modal('lowRequestModal','hide')" style="font-size:20px">close</button>
                 </div>
             </div>
         </div>
