Updated redirect page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <body onload="countdown()">
     <h1>crystallity.github.io</h1>
     <h2>Redirecting to repository in <span id="counter">3</span>...</h2>
-    <p>Click <a href="https://github.com/Crystallity/crystallity.github.io/tree/main" onclick="redirect()">here</a> if you aren't redirected successfully.</p>
+    <h3>Repository</h3>
+    <p>To go to the repository immediately, click <a href="https://github.com/Crystallity/crystallity.github.io" onclick="redirect('https://github.com/Crystallity/crystallity.github.io')">here</a>.</p>
+    <h3>Save The Fish</h3>
+    <p>Looking for the <a href="/savethefish/index.html" onclick="redirect('/savethefish/index.html')">Save The Fish</a> website?</p>
   </body>
 </html>
