--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h3>Repository</h3>
     <p>To go to the repository immediately, click <a href="https://github.com/Crystallity/crystallity.github.io" onclick="redirect('https://github.com/Crystallity/crystallity.github.io')">here</a>.</p>
     <h3>Save The Fish</h3>
-    <p>Looking for the <a href="/savethefish/index.html" onclick="redirect('/savethefish/index.html')">Save The Fish</a> website?</p>
+    <p>Looking for the <a href="/savethefish/" onclick="redirect('/savethefish/')">Save The Fish</a> website?</p>
   </body>
 </html>
