--- a/savethefish/index.html
+++ b/savethefish/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./styles.css">
 
         <!-- Load favicon -->
-        <link rel="icon" type="image/x-icon" href="logo.ico">
+        <link rel="icon" type="image/x-icon" href="./logo.ico">
 
         <!-- Load external JavaScript -->
         <script src="./scripts.js"></script>
