--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <h2>Redirecting to repository in <span id="counter">3</span>...</h2>
     <h3>Repository</h3>
     <p>To go to the repository immediately, click <a href="https://github.com/Crystallity/crystallity.github.io" onclick="redirect('https://github.com/Crystallity/crystallity.github.io')">here</a>.</p>
+    <h3>Azurelyte</h3>
+    <p>My WIP website is linked <a href="/azurelyte/" onclick="redirect('/azurelyte/')">here</a>.</p>
     <h3>Save The Fish</h3>
     <p>Looking for the <a href="/savethefish/" onclick="redirect('/savethefish/')">Save The Fish</a> website?</p>
   </body>
