--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body onload="countdown()">
     <h1>crystallity.github.io</h1>
-    <h2>Redirecting to repository in <span id="counter">3</span>...</h2>
+    <h2>Redirecting to repository in <span id="counter"></span>...</h2>
     <h3>Repository</h3>
     <p>To go to the repository immediately, click <a href="https://github.com/Crystallity/crystallity.github.io" onclick="redirect('https://github.com/Crystallity/crystallity.github.io')">here</a>.</p>
     <h3>Azurelyte</h3>
