--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -13,7 +13,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <style src="./styles.css"></style>
+        <style src="./testsheet.css"></style>
         <script>
             let e = false;
 
