Change stylesheet source

--- a/azurelyte/styletest.html
+++ b/azurelyte/styletest.html
@@ -4,7 +4,7 @@
   <head>
     <title>Style Testing</title>
 
-    <style src="./styles.css"></style>
+    <style src="styles.css"></style>
   </head>
 
   <body>
