Add smaller dropdown

--- a/azurelyte/styletest.html
+++ b/azurelyte/styletest.html
@@ -15,5 +15,9 @@
       <p>paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text paragraph text </p>
       <p>more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text more text </p>
     </details>
+    <details style="width: 50%">
+      <summary>Small dropdown</summary>
+      <p>Some text in the dropdown</p>
+    </details>
   </body>
 </html>
