--- a/azurelyte/changelog/index.html
+++ b/azurelyte/changelog/index.html
@@ -10,5 +10,6 @@
         border-bottom-left-radius: 10px;
     }
 </style>
+<link rel="stylesheet" href="../styles.css" />
 <h1 class="docHead">AzureLyte</h1>
 <div id="changelogDivLeft" class="changelogDiv"></div>
