--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <title>crystallity.github.io</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+
     <script src='./scripts.js'></script>
   </head>
   <body onload="countdown()">
