[Debug] Set favicon to azurelyte icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>crystallity.github.io</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/azurelyte/favicon.ico" />
 
     <script src='./scripts.js'></script>
   </head>
