--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -15,6 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <script src="./pages.js"></script>
+        <script src="./nav.js"></script>
     </head>
     <body onload="overwrite(home)">
         <div id="navbar">
