Change page var formatting

--- a/azurelyte/home.html
+++ b/azurelyte/home.html
@@ -2,8 +2,8 @@
 <h1>Welcome to the writetest page.</h1>
 <h2>It's a page for writetesting.</h2>
 <p>Click these buttons to change page content (<strong>without</strong> changing the url!).</p>
-<button onclick="overwriteCl(page1)">Load Page 1</button>
-<button onclick="overwriteCl(page2)">Load Page 2</button>
+<button onclick="overwriteCl(page_1)">Load Page 1</button>
+<button onclick="overwriteCl(page_2)">Load Page 2</button>
 <details>
     <summary>
         Filler text
@@ -22,4 +22,10 @@
             <p>AAARRRRGH!!! Enough with the filler text!</p>
         </details>
     </details>
+</details>
+<details>
+    <summary>Test Pages</summary>
+    <p>Some additional pages that can be used for testing purposes.</p>
+    <button onclick="overwriteCl(page_styletest)">Style Test</button>
+    <button onclick="overwriteCl(page_writetest2)">Writetest 2</button>
 </details>
