Move resize handler to inline script

--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -16,6 +16,7 @@
         
         <script src="./pages.js"></script>
         <script src="./navbar.js"></script>
+        <script>window.onresize = closeNav;</script>
     </head>
     <body onload="overwrite(home)">
         <div id="navbar">
