Setup content loading

--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -18,7 +18,7 @@
         <script src="./navbar.js"></script>
         <script>window.onresize = closeNav;</script>
     </head>
-    <body onload="overwrite(home)">
+    <body onload="loadContent()">
         <div id="navbar">
             <a><span class="material-symbols-rounded navbarIcon" id="menuIcon" onclick="toggleNav()">menu</span></a>
             <span onclick="overwriteCl(page1)" class="material-symbols-rounded navbarIcon nonMenuIcon">home</span>
