Add loading message

--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -31,6 +31,9 @@
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">account_circle</span>
         </div>
         <div id="navbar-expanded"></div>
-        <div id="main"></div>
+        <div id="main">
+            <h1 class="docHead">Loading...</h1>
+            <h1>AzureLyte preloads webpages to make switching between them faster.</h1>
+        </div>
     </body>
 </html>
