Update page code

--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -21,14 +21,14 @@
     <body onload="loadContent()">
         <div id="navbar">
             <a><span class="material-symbols-rounded navbarIcon" id="menuIcon" onclick="toggleNav()">menu</span></a>
-            <span onclick="overwriteCl(page1)" class="material-symbols-rounded navbarIcon nonMenuIcon">home</span>
+            <span onclick="overwriteCl(page_home)" class="material-symbols-rounded navbarIcon nonMenuIcon">home</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">help</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">code_blocks</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">mail</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">public</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">feed</span>
             <span class="material-symbols-rounded navbarIcon nonMenuIcon">receipt_long</span>
-            <span class="material-symbols-rounded navbarIcon nonMenuIcon">account_circle</span>
+            <span onclick="window.location.replace('https://crystallity.github.io')" class="material-symbols-rounded navbarIcon nonMenuIcon">account_circle</span>
         </div>
         <div id="navbar-expanded"></div>
         <div id="main">
