Add and implement details.small

--- a/azurelyte/home.html
+++ b/azurelyte/home.html
@@ -4,7 +4,7 @@
 <p>Click these buttons to change page content (<strong>without</strong> changing the url!).</p>
 <button onclick="overwriteCl(page_1)">Load Page 1</button>
 <button onclick="overwriteCl(page_2)">Load Page 2</button>
-<details>
+<details class="small">
     <summary>
         Filler text
     </summary>
@@ -23,7 +23,7 @@
         </details>
     </details>
 </details>
-<details>
+<details class="small">
     <summary>Test Pages</summary>
     <p>Some additional pages that can be used for testing purposes.</p>
     <button onclick="overwriteCl(page_styletest)">Style Test</button>
