--- a/writetest3.html
+++ b/writetest3.html
@@ -12,8 +12,11 @@
 
 </head>
 <body>
-    <button id="button">Load page</button>
-    <object id="content" style="width: 100%; height:auto; display:none;"></object>
+    <button id="noprefetch">Load content</button>
+    <button id="prefetch">Load prefetched content</button>
+    <button id="triggerboth">Load both</button>
+    <object id="content1" type="video/mp4" style="width: 700px; height: 700px; display: inline; border: 2px solid black;"></object>
+    <object id="content2" type="video/mp4" style="width: 700px; height: 700px; display: inline; border: 2px solid black;"></object>
     
 </body>
 </html>
