--- a/writetest3.html
+++ b/writetest3.html
@@ -11,7 +11,7 @@
     <script src="/writetest3.js" type="text/javascript"></script>
 
 </head>
-<body>
+<body onload="startup()">
     <button id="noprefetch">Load content</button>
     <button id="prefetch">Load prefetched content</button>
     <button id="triggerboth">Load both</button>
