Fix inline onload listener

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -17,7 +17,7 @@
         }
     </script>
 </head>
-<body onload="setup">
+<body onload="setup()">
     <h1 class="dochead">Spanish Phrase Generator</h1>
     <h2>Press the button to generate a random sentence in Spanish.</h2>
     <button id="generate">Generate</button>
