Add description to code.

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+    - Spanish Text Generator -
+    This is a little project I made that creates random phrases in Spanish.
+    Inspired by the first actually helpful Spanish class I took. It's not
+    very technically impressive, but I wrote commentd for once. :)
+-->
 <html lang="en">
     <head>
         <title>Spanish Phrase Generator</title>
