--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -13,13 +13,9 @@
         <link rel="stylesheet" href="/azurelyte/styles.css" />
         <!-- Inline JS - normally I would use a seperate file but it's just a small project. -->
         <script type="text/javascript">
-            function setup() {
-                // So far, this just adds an event listener for the button.
-                document.querySelector('#generate').addEventListener('click', createSentence);
-                console.log('setup complete');
-            }
-
             function createSentence() {
+                console.log('starting sentence creation');
+
                 // I'm using a simple algorithm that sticks subjects and verbs together.
                 let output = document.querySelector('#output');
 
@@ -54,15 +50,17 @@
                 output.innerHTML = sentence;
                 console.log('sentence created');
             }
+
+            console.log('script loaded');
         </script>
     </head>
 
-    <body onload="setup()">
-        <!-- The HTML is super simple. I tried to use addEventListener for events, but for some
-        reason using it for body.onload didn't work, so that's inline. -->
+    <body">
+        <!-- The HTML is super simple. I tried to use addEventListener for events, but I was
+        having difficulty with it, so I went for inline listeners. -->
         <h1 class="docHead">Spanish Phrase Generator</h1>
         <h2>Press the button to generate a random sentence in Spanish.</h2>
-        <button id="generate">Generate</button>
+        <button onclick="createSentence()">Generate</button>
         <h1 id="output"></h1>
     </body>
 </html>
