--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -58,7 +58,7 @@
     <body">
         <!-- The HTML is super simple. I tried to use addEventListener for events, but I was
         having difficulty with it, so I went for inline listeners. -->
-        <h1 class="docHead">Spanish Phrase Generator</h1>
+        <h1 class="docHead" style="margin: 10px;">Spanish Phrase Generator</h1>
         <h2>Press the button to generate a random sentence in Spanish.</h2>
         <button onclick="createSentence()">Generate</button>
         <h1 id="output"></h1>
