--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -28,7 +28,8 @@
 
                 // I might add more words later but these work for now.
 
-                let plural1, plural2 = Math.round(Math.random());
+                let plural1 = Math.round(Math.random());
+                let plural2 = Math.round(Math.random());
                 // There's probably a better way to do this, but I don't really care.
                 if (plural1 == 1) {
                     let noun1 = nounsPlural[Math.round(Math.random()*(nounsPlural.length-1))];
