Add debug message

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -30,6 +30,7 @@
 
                 let plural1 = Math.round(Math.random());
                 let plural2 = Math.round(Math.random());
+                console.log('created plural values:', plural1, plural2);
                 // There's probably a better way to do this, but I don't really care.
                 if (plural1 == 1) {
                     let noun1 = nounsPlural[Math.round(Math.random()*(nounsPlural.length-1))];
