Add debug message

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -48,6 +48,7 @@
                     let conjugate = 'a';
                 }
 
+                console.log('set random variables');
                 console.log('generated values: noun1 =', noun1, 'noun2 =', noun2, 'conjugate =', conjugate);
                 
                 // Constructing the sentence.
