--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -32,20 +32,21 @@
                 let plural2 = Math.round(Math.random());
                 console.log('created plural values:', plural1, plural2);
                 // There's probably a better way to do this, but I don't really care.
+                var noun1, noun2, conjugate;
                 if (plural1 == 1) {
-                    let noun1 = nounsPlural[Math.round(Math.random()*(nounsPlural.length-1))];
+                    noun1 = nounsPlural[Math.round(Math.random()*(nounsPlural.length-1))];
                 } else {
-                    let noun1 = nounsSingle[Math.round(Math.random()*(nounsSingle.length-1))];
+                    noun1 = nounsSingle[Math.round(Math.random()*(nounsSingle.length-1))];
                 }
                 if (plural2 == 1) {
-                    let noun2 = nounsPlural[Math.round(Math.random()*(nounsPlural.length-1))];
+                    noun2 = nounsPlural[Math.round(Math.random()*(nounsPlural.length-1))];
                 } else {
-                    let noun2 = nounsSingle[Math.round(Math.random()*(nounsSingle.length-1))];
+                    noun2 = nounsSingle[Math.round(Math.random()*(nounsSingle.length-1))];
                 }
                 if (plural1 == 1) {
-                    let conjugate = 'an';
+                    conjugate = 'an';
                 } else {
-                    let conjugate = 'a';
+                    conjugate = 'a';
                 }
 
                 console.log('set random variables');
