Move toUpperCase() to correct place

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -50,7 +50,7 @@
                     conjugate = 'a';
                 }
 
-                noun1 = toUpperCase(noun1[0]) + noun1.slice(1);
+                noun1 = noun1[0].toUpperCase() + noun1.slice(1);
 
                 console.log('generated values: noun1 =', noun1, 'noun2 =', noun2, 'conjugate =', conjugate);
                 
