--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -23,7 +23,7 @@
                 
                 const nounsSingle = ['la estudiante', 'mi amigo', 'el maestro', 'la escuela', 'el borrador', 'la computadora'];
                 const nounsPlural = ['las estudiantes', 'mis amigos', 'los maestros', 'las escuelas', 'los borradores', 'las computadoras'];
-                const verbs = ['Eschuch', 'Busc', 'Ayud'];
+                const verbs = ['eschuch', 'busc', 'ayud', 'com', 'us', 'mir'];
 
                 console.log('loaded constants: output =', output, 'nounsSingle =', nounsSingle, 'nounsPlural =', nounsPlural, 'verbs =', verbs);
 
