--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -58,20 +58,34 @@
                 let sentence = noun1 + ' ' + verbs[Math.round(Math.random()*(verbs.length-1))] + conjugate + ' ' + noun2 + '.';
                 console.log('constructed sentence: ', sentence);
 
-                output.innerHTML = sentence;
+                let print = document.createElement('p');
+                print.innerHTML = sentence;
+                document.querySelector('#output').appendChild(print);
                 console.log('sentence creation complete');
             }
 
             console.log('script loaded');
         </script>
+        <!-- Inline stylesheet for small modifications -->
+        <style>
+            .docHead {margin: 10px;}
+
+            #output {
+                border: 3px solid #3030f0;
+                border-radius: 10px;
+                width: auto;
+                height: auto;
+                margin: 20px;
+            }
+        </style>
     </head>
 
     <body onload="document.querySelector('#generate').addEventListener('click', createSentence)">
         <!-- The HTML is super simple. I tried to use addEventListener for events, but I was
         having difficulty with it, so I went for an inline onload listener. -->
-        <h1 class="docHead" style="margin: 10px;">Spanish Phrase Generator</h1>
+        <h1 class="docHead">Spanish Phrase Generator</h1>
         <h2>Press the button to generate a random sentence in Spanish.</h2>
         <button id="generate">Generate</button>
-        <h1 id="output"></h1>
+        <div id="output"></div>
     </body>
 </html>
