Add padding to output

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -76,6 +76,7 @@
                 width: auto;
                 height: auto;
                 margin: 20px;
+                padding: 10px;
             }
         </style>
     </head>
