--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -72,9 +72,10 @@
                 border: 3px solid #3030f0;
                 border-radius: 10px;
                 width: auto;
-                height: auto;
+                height: 100%;
                 margin: 20px;
                 padding: 10px;
+                overflow: auto;
             }
         </style>
     </head>
