Add console message to share()

--- a/spanishgenerator.html
+++ b/spanishgenerator.html
@@ -65,9 +65,11 @@
             }
 
             function share() {
+                // A simple sharing button that opens the user's mail client.
                 let sharelink = 'mailto:?subject=Silly Spanish Sentences&body=Made using crystallity.github.io/spanishgenerator\n\n';
                 sharelink = sharelink + document.querySelector('#output').innerText;
                 window.open(sharelink);
+                console.log('shared sentences');
             }
 
             console.log('script loaded');
