--- a/azurelyte/index.html
+++ b/azurelyte/index.html
@@ -7,6 +7,9 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,700,0,0" />
         <link rel="stylesheet" href="./styles.css" />
+
+        <link rel="stylesheet" href="./lightmode.css" id="theme" />
+
         <!--
             Useful Material Symbols:
             <span class="material-symbols-rounded">open_in_new</span> - "Open in new tab" symbol
