Add theme toggle

--- a/azurelyte/home.html
+++ b/azurelyte/home.html
@@ -28,4 +28,5 @@
     <p>Some additional pages that can be used for testing purposes.</p>
     <button onclick="overwriteCl(page_styletest)">Style Test</button>
     <button onclick="overwriteCl(page_writetest2)">Writetest 2</button>
+    <button onclick="toggleTheme()">Change Theme</button>
 </details>
