Wrap details contents in div.details-content

--- a/azurelyte/home.html
+++ b/azurelyte/home.html
@@ -9,24 +9,32 @@
     <summary>
         Filler text
     </summary>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <details>
-        <summary>
-            More filler text ;)
-        </summary>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="details-content">
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <details>
             <summary>
-                Even more filler text 0.0
+                More filler text ;)
             </summary>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <p>AAARRRRGH!!! Enough with the filler text!</p>
+            <div class="details-content">
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <details>
+                    <summary>
+                        Even more filler text 0.0
+                    </summary>
+                    <div class="details-content">
+                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                        <p>AAARRRRGH!!! Enough with the filler text!</p>
+                    </div>
+                </details>
+            </div>
         </details>
-    </details>
+    </div>
 </details>
 <details class="small">
     <summary>Test Pages</summary>
-    <p>Some additional pages that can be used for testing purposes.</p>
-    <button onclick="overwriteCl(page_styletest)">Style Test</button>
-    <button onclick="overwriteCl(page_writetest2)">Writetest 2</button>
+    <div class="details-content">
+        <p>Some additional pages that can be used for testing purposes.</p>
+        <button onclick="overwriteCl(page_styletest)">Style Test</button>
+        <button onclick="overwriteCl(page_writetest2)">Writetest 2</button>
+    </div>
 </details>
